improve top bar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,5 @@
     <string name="players">Players</string>
     <string name="rounds">Rounds</string>
     <string name="result">Result</string>
-    <string name="dev_info">This game developed by Isfandiyar Rashidzade in the scope of TestDevLab seniority level assignment under supervision of Edijs Gorbunovs.</string>
+    <string name="dev_info">This game developed by Isfandiyar Rashidzade in the scope of TestDevLab seniority level assignment under supervision of Edijs Gorbunovs in 2024.</string>
 </resources>
