--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,5 +14,6 @@
     <string name="rounds">Rounds</string>
     <string name="result">Result</string>
     <string name="loading">Loading</string>
+    <string name="nothing_to_show">Nothing to show</string>
     <string name="dev_info">This game was developed by Isfandiyar Rashidzade as part of the TestDevLab seniority level assignment under the supervision of Edijs Gorbunovs in 2024.</string>
 </resources>
