--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,11 @@
     <string name="loading">Loading</string>
     <string name="nothing_to_show">Nothing to show</string>
     <string name="dev_info">This game was developed by Isfandiyar Rashidzade as part of the TestDevLab seniority level assignment under the supervision of Edijs Gorbunovs in 2024.</string>
+
+    <string name="sleep_emoji" translatable="false">&#x1F634;</string>
+    <string name="cry_emoji" translatable="false">&#x1F62D;</string>
+    <string name="normal_emoji" translatable="false">&#x1F610;</string>
+    <string name="good_emoji" translatable="false">&#x1F642;</string>
+    <string name="happy_emoji" translatable="false">&#x1F601;</string>
+    <string name="celebrate_emoji" translatable="false">&#x1F973;</string>
 </resources>
